// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupOverlay.service getBreadcrumbs should return default breadcrumbs 1`] = `
Array [
  Object {
    "hasLink": true,
    "name": "MyFlowNode",
  },
  Object {
    "name": "123",
  },
]
`;

exports[`PopupOverlay.service getBreadcrumbs should return multi instance body breadcrumbs 1`] = `
Array [
  Object {
    "hasLink": true,
    "name": "MyFlowNode (Multi Instance)",
  },
  Object {
    "name": "123",
  },
]
`;

exports[`PopupOverlay.service getBreadcrumbs should return multi instance child breadcrumbs 1`] = `
Array [
  Object {
    "hasLink": true,
    "name": "MyFlowNode (Multi Instance)",
  },
  Object {
    "hasLink": true,
    "name": "MyFlowNode",
    "options": Object {
      "selectMultiInstanceChildrenOnly": true,
    },
  },
  Object {
    "name": "123",
  },
]
`;
